# lang

./: .gitignore  CMakeLists.txt  README.md  go.mod
cmake/: CompileOptions.cmake
examples/: ir.dot  ir.txt  test.og
inja/: CMakeLists.txt
ir_comp/: CMakeLists.txt  ir_comp_test.cpp  ir_compile.cpp  print.cpp
ir_comp/includes/ir_comp/: compiler.hpp  defs.hpp  instructions.hpp  ir.hpp  register.hpp  types.hpp
ir_comp/testdata/: test.og
lexer/: CMakeLists.txt  error.cpp  lexFuncs.cpp  lexFuncs.hpp  lexemes.cpp  lexer.cpp  lexer_test.cpp
lexer/includes/lexer/: error.hpp  lexemes.hpp  lexer.hpp
lexer/lexemes/: genLexData.go  lexemes.cpp.tmpl  lexemes.go  lexemes.hpp.tmpl
optimizer/: CMakeLists.txt  dag.cpp  graphviz.cpp  liveness.cpp  optimizer.cpp  optimizer_test.cpp
optimizer/includes/optimizer/: dag.hpp  dump.hpp  liveness.hpp  optimizer.hpp
optimizer/tmpl/: block.dot.tmpl  func.dot.tmpl  ir.dot.tmpl
optimizer/tmpl/dag/: dag.dot.tmpl  node.dot.tmpl
optimizer/tmpl/ir/: block.dot.tmpl  instr.dot.tmpl
parser/: CMakeLists.txt  errors.cpp  grVizGen.cpp  grammar.bnf  nodes.cpp  nodes.hpp  parse_expr.cpp  parse_expr.hpp  parse_programm.cpp  parse_programm.hpp  parse_stmt.cpp  parse_stmt.hpp  parser.cpp  parser.hpp  parser_expr.hpp  parser_test.cpp
parser/includes/parser/: errors.hpp  grVizGen.hpp  nodes.hpp  parser.hpp
parser/testdata/: test.og
semantic/: CMakeLists.txt  errors.cpp  errors.hpp  scope.cpp  scope.hpp  semantic.cpp  semantic_test.cpp  symtab.cpp  symtab.hpp
semantic/includes/semantic/: checker.hpp  errors.hpp  scope.hpp  symtab.hpp  types.hpp
semantic/testdata/: test.og
